@@ -16,16 +16,26 @@ _myfill_ret
 	ret
 
 _fillzero
-	mov	arg03, arg02
+	mov	arg03, arg02 wz
 	mov	arg02, #0
-	call	#_myfill
+ if_e	jmp	#LR__0004
+LR__0003
+	wrlong	arg02, arg01
+	add	arg01, #4
+	djnz	arg03, #LR__0003
+LR__0004
 _fillzero_ret
 	ret
 
 _fillone
-	mov	arg03, arg02
+	mov	arg03, arg02 wz
 	neg	arg02, #1
-	call	#_myfill
+ if_e	jmp	#LR__0006
+LR__0005
+	wrlong	arg02, arg01
+	add	arg01, #4
+	djnz	arg03, #LR__0005
+LR__0006
 _fillone_ret
 	ret
 
